fix: auth flow fixed
